style: fix learn more horizontally aligned

--- a/src/styles/page/_home.scss
+++ b/src/styles/page/_home.scss
@@ -199,7 +199,6 @@ section {
       font-weight: 700;
       bottom: 20px;
       width: 100%;
-      padding-left: 20px;
       color: #535353;
     }
     &__img {
@@ -214,6 +213,7 @@ section {
       margin-top: 10px;
       font-size: 20px;
       line-height: 28px;
+      min-height: 170px;
       p {
         font-family: "Lato";
         font-size: 20px;
